--- a/configs/classical_descriptors.yaml
+++ b/configs/classical_descriptors.yaml
@@ -20,14 +20,14 @@ data:
             #     'random_brightness', 'random_contrast', 'additive_speckle_noise',
             #     'additive_gaussian_noise', 'additive_shade', 'motion_blur']
             params:
-                random_brightness: {max_abs_change: 50}
-                random_contrast: {strength_range: [0.5, 1.5]}
-                additive_gaussian_noise: {stddev_range: [0, 10]}
-                additive_speckle_noise: {prob_range: [0, 0.0035]}
-                additive_shade:
-                    transparency_range: [-0.5, 0.5]
-                    kernel_size_range: [100, 150]
-                motion_blur: {max_kernel_size: 3}
+                # random_brightness: {max_abs_change: 50}
+                # random_contrast: {strength_range: [0.5, 1.5]}
+                additive_gaussian_noise: {stddev_range: [0, 0]} # [0, 10]
+                # additive_speckle_noise: {prob_range: [0, 0.0035]}
+                # additive_shade:
+                    # transparency_range: [-0.5, 0.5]
+                    # kernel_size_range: [100, 150]
+                # motion_blur: {max_kernel_size: 3}
 
 training:
     val_batches: 50 # batches of validation, batch = 1
@@ -35,6 +35,7 @@ training:
 
 model:
     name: 'classical_detectors_descriptors'
+    filter: # 'bilateral'
     method: 'sift'  # 'orb' 'sift'
     batch_size: 1  # unused
     learning_rate: 0.001  # unused
