--- a/configs/classical_descriptors.yaml
+++ b/configs/classical_descriptors.yaml
@@ -22,7 +22,8 @@ data:
             params:
                 # random_brightness: {max_abs_change: 50}
                 # random_contrast: {strength_range: [0.5, 1.5]}
-                additive_gaussian_noise: {stddev_range: [25, 25]} # [0, 10]
+                # additive_gaussian_noise: {stddev_range: [25, 25]} # [0, 10]
+                additive_gaussian_noise: {stddev_range: [5, 5]} # [0, 10]
                 # additive_speckle_noise: {prob_range: [0, 0.0035]}
                 # additive_shade:
                     # transparency_range: [-0.5, 0.5]
@@ -36,7 +37,7 @@ training:
 model:
     name: 'classical_detectors_descriptors'
     filter: # 'bilateral'
-    # filter: 'bilateral'
+    filter: 'bilateral'
     method: 'sift'  # 'orb' 'sift'
     batch_size: 1  # unused
     learning_rate: 0.001  # unused
