--- a/configs/classical_descriptors.yaml
+++ b/configs/classical_descriptors.yaml
@@ -3,11 +3,8 @@ data:
     dataset: 'hpatches'  # 'hpatches' 'coco'
     alteration: 'all'  # 'i' 'v' 'all'
     cache_in_memory: false
-    # validation_size: 100
-
     shuffle: true
     preprocessing:
-        # resize: [240, 320]  # False for coco
         resize: [480, 640]  # False for coco
     ### augmentation
     augmentation:
@@ -16,20 +13,8 @@ data:
             primitives: [
                 'additive_gaussian_noise'
             ]
-            # primitives: [
-            #     'random_brightness', 'random_contrast', 'additive_speckle_noise',
-            #     'additive_gaussian_noise', 'additive_shade', 'motion_blur']
             params:
-                # random_brightness: {max_abs_change: 50}
-                # random_contrast: {strength_range: [0.5, 1.5]}
-                # additive_gaussian_noise: {stddev_range: [25, 25]} # [0, 10]
                 additive_gaussian_noise: {stddev_range: [5, 5]} # [0, 10]
-                # additive_speckle_noise: {prob_range: [0, 0.0035]}
-                # additive_shade:
-                    # transparency_range: [-0.5, 0.5]
-                    # kernel_size_range: [100, 150]
-                # motion_blur: {max_kernel_size: 3}
-
 training:
     val_batches: 2 # batches of validation, batch = 1
     reproduce: true
@@ -39,9 +24,8 @@ model:
     filter: # 'bilateral'
     filter: 'bilateral'
     filter_d: 11
-    method: 'sift'  # 'orb' 'sift'
+    method: 'sift'  # 'sift'
     batch_size: 1  # unused
-    learning_rate: 0.001  # unused
     nms: 4
     top_k: 1000  ## not useful
 eval_iter: 600
