--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,15 @@
-name: py36-imgden
+name: py36-imgdn
 channels:
   - defaults
 dependencies:
+  - _libgcc_mutex=0.1=main
+  - backcall=0.1.0=py36_0
   - ca-certificates=2019.1.23=0
   - certifi=2019.3.9=py36_0
   - decorator=4.4.0=py36_1
   - ipython=7.5.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
+  - jedi=0.13.3=py36_0
   - jupyter_client=5.2.4=py36_0
   - jupyter_core=4.4.0=py36_0
   - libedit=3.1.20181209=hc058e9b_0
@@ -18,113 +21,81 @@ dependencies:
   - openssl=1.1.1b=h7b6447c_1
   - parso=0.4.0=py_0
   - pexpect=4.7.0=py36_0
+  - pickleshare=0.7.5=py36_0
   - pip=19.1.1=py36_0
   - prompt_toolkit=2.0.9=py36_0
+  - ptyprocess=0.6.0=py36_0
   - pygments=2.4.0=py_0
   - python=3.6.8=h0371630_0
   - python-dateutil=2.8.0=py36_0
+  - pyzmq=18.1.1=py36he6710b0_0
   - readline=7.0=h7b6447c_5
   - setuptools=41.0.1=py36_0
+  - six=1.14.0=py36_0
   - sqlite=3.28.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - tornado=6.0.2=py36h7b6447c_0
   - traitlets=4.3.2=py36_0
+  - wcwidth=0.1.9=py_0
   - wheel=0.33.4=py36_0
   - xz=5.2.4=h14c3975_4
   - zeromq=4.3.1=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - pip:
-    - absl-py==0.7.1
-    - appdirs==1.4.3
-    - argparse==1.4.0
-    - astor==0.8.0
-    - attrs==19.1.0
-    - backcall==0.1.0
-    - black==19.3b0
-    - bleach==3.1.0
-    - click==7.0
-    - coloredlogs==10.0
+    - attrs==19.3.0
+    - bleach==3.1.4
+    - coloredlogs==14.0
     - cycler==0.10.0
     - defusedxml==0.6.0
     - entrypoints==0.3
-    - gast==0.2.2
-    - grpcio==1.20.1
-    - h5py==2.9.0
-    - humanfriendly==4.18
-    - imageio==2.5.0
-    - imgaug==0.2.9
-    - importlib-metadata==0.17
-    - ipykernel==5.1.1
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.4.2
-    - jedi==0.13.3
-    - jinja2==2.10.1
-    - joblib==0.13.2
-    - jsonschema==3.0.1
+    - humanfriendly==8.1
+    - imageio==2.8.0
+    - imgaug==0.4.0
+    - importlib-metadata==1.6.0
+    - ipykernel==5.2.0
+    - ipywidgets==7.5.1
+    - jinja2==2.11.1
+    - joblib==0.14.1
+    - jsonschema==3.2.0
     - jupyter==1.0.0
-    - jupyter-console==6.0.0
-    - jupyterlab==0.35.6
-    - jupyterlab-server==0.2.0
-    - keras-applications==1.0.7
-    - keras-preprocessing==1.0.9
+    - jupyter-console==6.1.0
     - kiwisolver==1.1.0
-    - markdown==3.1.1
     - markupsafe==1.1.1
-    - matplotlib==2.0.0
+    - matplotlib==3.2.1
     - mistune==0.8.4
-    - mock==3.0.5
-    - nbconvert==5.5.0
-    - nbformat==4.4.0
-    - networkx==2.3
-    - notebook==5.7.8
-    - numpy==1.12.1
+    - nbconvert==5.6.1
+    - nbformat==5.0.4
+    - networkx==2.4
+    - notebook==6.0.3
+    - numpy==1.18.2
     - opencv-contrib-python==3.4.2.16
     - opencv-python==3.4.2.16
-    - pandas==0.24.2
     - pandocfilters==1.4.2
-    - path-py==12.0.1
-    - pebble==4.3.10
-    - pickleshare==0.7.5
-    - pillow==6.0.0
-    - prometheus-client==0.6.0
-    - protobuf==3.7.1
-    - ptyprocess==0.6.0
-    - pydensecrf==1.0rc3
-    - pykitti==0.3.1
-    - pyparsing==2.4.0
-    - pyrsistent==0.15.2
-    - pytz==2019.1
-    - pywavelets==1.0.3
-    - pyyaml==5.1
-    - pyzmq==18.0.1
-    - qtconsole==4.5.0
-    - scikit-image==0.15.0
-    - scikit-learn==0.21.2
-    - scipy==0.19.0
-    - seaborn==0.9.0
+    - pillow==7.0.0
+    - prometheus-client==0.7.1
+    - protobuf==3.11.3
+    - pyparsing==2.4.6
+    - pyrsistent==0.16.0
+    - pywavelets==1.1.1
+    - pyyaml==5.3.1
+    - qtconsole==4.7.2
+    - qtpy==1.9.0
+    - scikit-image==0.16.2
+    - scikit-learn==0.22.2.post1
+    - scipy==1.4.1
     - send2trash==1.5.0
-    - shapely==1.6.4.post2
-    - six==1.12.0
-    - sklearn==0.0
-    - sty==1.0.0b11
-    - tensorboard==1.13.1
-    - tensorboardx==1.6
-    - tensorflow==1.13.1
-    - tensorflow-estimator==1.13.0
+    - shapely==1.7.0
+    - tensorboardx==2.0
     - termcolor==1.1.0
-    - terminado==0.8.2
-    - testpath==0.4.2
-    - toml==0.10.0
-    - torch==0.4.1
-    - torch-batch-svd==0.0.0
+    - terminado==0.8.3
+    - testpath==0.4.4
+    - torch==1.4.0
     - torchgeometry==0.1.2
     - torchsummary==1.5.1
-    - torchvision==0.2.1
-    - tqdm==4.11.2
-    - wcwidth==0.1.7
+    - torchvision==0.5.0
+    - tqdm==4.44.1
     - webencodings==0.5.1
-    - werkzeug==0.15.4
-    - widgetsnbextension==3.4.2
-    - zipp==0.5.1
-prefix: /home/yyjau/anaconda3/envs/py36-torch
+    - widgetsnbextension==3.5.1
+    - zipp==3.1.0
+prefix: /home/yoyee/miniconda3/envs/py36-imgden
 
